src/parser.cpp
#include "parser.h"

#include <iso646.h>
#include <list>
#include <stack>

#include "ast.h"
#include "rtl_compile.h"
#include "util.h"

class Parser {
public:
    Parser(const std::vector<Token> &tokens);

    const std::vector<Token> tokens;
    static Scope *global_scope; // TODO: static is a hack, used by StringReference constructor
    std::vector<Token>::size_type i;
    int expression_depth;

    std::stack<const TypeFunction *> functiontypes;
    std::stack<std::list<std::pair<TokenType, unsigned int>>> loops;

    typedef std::pair<std::vector<std::string>, const Type *> VariableInfo;

    const Type *parseArrayType(Scope *scope);
    const Type *parseDictionaryType(Scope *scope);
    const Type *parseRecordType(Scope *scope);
    const Type *parseEnumType(Scope *scope);
    const Type *parsePointerType(Scope *scope);
    const Type *parseType(Scope *scope);
    const Statement *parseTypeDefinition(Scope *scope);
    const Statement *parseConstantDefinition(Scope *scope);
    const FunctionCall *parseFunctionCall(const Expression *func, const Expression *self, Scope *scope);
    const ArrayLiteralExpression *parseArrayLiteral(Scope *scope);
    const DictionaryLiteralExpression *parseDictionaryLiteral(Scope *scope);
    const Name *parseQualifiedName(Scope *scope, int &enclosing);
    const Expression *parseAtom(Scope *scope);
    const Expression *parseExponentiation(Scope *scope);
    const Expression *parseMultiplication(Scope *scope);
    const Expression *parseAddition(Scope *scope);
    const Expression *parseComparison(Scope *scope);
    const Expression *parseMembership(Scope *scope);
    const Expression *parseConjunction(Scope *scope);
    const Expression *parseDisjunction(Scope *scope);
    const Expression *parseConditional(Scope *scope);
    const Expression *parseExpression(Scope *scope, bool allow_nothing = false);
    const VariableInfo parseVariableDeclaration(Scope *scope);
    void parseFunctionHeader(Scope *scope, std::string &name, const Type *&returntype, Scope *&newscope, std::vector<FunctionParameter *> &args);
    const Statement *parseFunctionDefinition(Scope *scope);
    const Statement *parseExternalDefinition(Scope *scope);
    const Statement *parseDeclaration(Scope *scope);
    const Statement *parseIfStatement(Scope *scope, int line);
    const Statement *parseReturnStatement(Scope *scope, int line);
    const Statement *parseVarStatement(Scope *scope, int line);
    const Statement *parseWhileStatement(Scope *scope, int line);
    const Statement *parseCaseStatement(Scope *scope, int line);
    const Statement *parseForStatement(Scope *scope, int line);
    const Statement *parseLoopStatement(Scope *scope, int line);
    const Statement *parseRepeatStatement(Scope *scope, int line);
    const Statement *parseExitStatement(Scope *scope, int line);
    const Statement *parseNextStatement(Scope *scope, int line);
    const Statement *parseTryStatement(Scope *scope, int line);
    const Statement *parseRaiseStatement(Scope *scope, int line);
    const Statement *parseImport(Scope *scope);
    const Statement *parseStatement(Scope *scope);
    const Program *parse();
private:
    Parser(const Parser &);
    Parser &operator=(const Parser &);
};

Scope *Parser::global_scope;

Parser::Parser(const std::vector<Token> &tokens)
  : tokens(tokens),
    i(0),
    expression_depth(0),
    functiontypes(),
    loops()
{
}

TypeEnum::TypeEnum(const std::map<std::string, int> &names)
  : TypeNumber(),
    names(names)
{
    {
        Scope *newscope = new Scope(Parser::global_scope);
        std::vector<FunctionParameter *> params;
        FunctionParameter *fp = new FunctionParameter("self", this, ParameterType::INOUT, newscope);
        params.push_back(fp);
        Function *f = new Function("enum.to_string", TYPE_STRING, newscope, params);
        f->scope->addName("self", fp, true);
        std::vector<const Expression *> values;
        for (auto n: names) {
            if (n.second < 0) {
                internal_error("TypeEnum");
            }
            if (values.size() < static_cast<size_t>(n.second)+1) {
                values.resize(n.second+1);
            }
            if (values[n.second] != nullptr) {
                internal_error("TypeEnum");
            }
            values[n.second] = new ConstantStringExpression(n.first);
        }
        f->statements.push_back(new ReturnStatement(0, new ArrayValueIndexExpression(TYPE_STRING, new ArrayLiteralExpression(TYPE_STRING, values), new VariableExpression(fp))));
        methods["to_string"] = f;
        Parser::global_scope->addName("enum.to_string."+std::to_string(reinterpret_cast<intptr_t>(this)), f, true);
    }
}

static ComparisonExpression::Comparison comparisonFromToken(const Token &token)
{
    switch (token.type) {
        case EQUAL:     return ComparisonExpression::EQ;
        case NOTEQUAL:  return ComparisonExpression::NE;
        case LESS:      return ComparisonExpression::LT;
        case GREATER:   return ComparisonExpression::GT;
        case LESSEQ:    return ComparisonExpression::LE;
        case GREATEREQ: return ComparisonExpression::GE;
        default:
            internal_error("invalid comparison type");
    }
}

StringIndexExpression::StringIndexExpression(const ReferenceExpression *ref, const Expression *index)
  : ReferenceExpression(ref->type, ref->is_readonly),
    ref(ref),
    index(index),
    load(nullptr),
    store(nullptr)
{
    {
        std::vector<const Expression *> args;
        args.push_back(ref);
        args.push_back(index);
        args.push_back(new ConstantNumberExpression(number_from_uint32(1)));
        load = new FunctionCall(new VariableExpression(dynamic_cast<const Variable *>(Parser::global_scope->lookupName("substring"))), args);
    }
    {
        std::vector<const Expression *> args;
        args.push_back(ref);
        args.push_back(index);
        args.push_back(new ConstantNumberExpression(number_from_uint32(1)));
        store = new FunctionCall(new VariableExpression(dynamic_cast<const Variable *>(Parser::global_scope->lookupName("splice"))), args);
    }
}

const Type *Parser::parseArrayType(Scope *scope)
{
    if (tokens[i].type != ARRAY) {
        internal_error("Array expected");
    }
    i++;
    if (tokens[i].type != LESS) {
        error(2002, tokens[i], "'<' expected");
    }
    i++;
    const Type *elementtype = parseType(scope);
    if (tokens[i].type != GREATER) {
        error(2003, tokens[i], "'>' expected");
    }
    i++;
    return new TypeArray(elementtype);
}

const Type *Parser::parseDictionaryType(Scope *scope)
{
    if (tokens[i].type != DICTIONARY) {
        internal_error("Dictionary expected");
    }
    i++;
    if (tokens[i].type != LESS) {
        error(2005, tokens[i], "'<' expected");
    }
    i++;
    const Type *elementtype = parseType(scope);
    if (tokens[i].type != GREATER) {
        error(2006, tokens[i], "'>' expected");
    }
    i++;
    return new TypeDictionary(elementtype);
}

const Type *Parser::parseRecordType(Scope *scope)
{
    if (tokens[i].type != RECORD) {
        internal_error("RECORD expected");
    }
    i++;
    std::map<std::string, std::pair<int, const Type *> > fields;
    int index = 0;
    while (tokens[i].type != END) {
        if (tokens[i].type != IDENTIFIER) {
            error(2008, tokens[i], "identifier expected");
        }
        std::string name = tokens[i].text;
        if (fields.find(name) != fields.end()) {
            error(2009, tokens[i], "duplicate field: " + name);
        }
        ++i;
        if (tokens[i].type != COLON) {
            error(2010, tokens[i], "colon expected");
        }
        ++i;
        const Type *t = parseType(scope);
        fields[name] = std::make_pair(index, t);
        index++;
    }
    i++;
    if (tokens[i].type != RECORD) {
        error(2100, tokens[i], "'RECORD' expected");
    }
    i++;
    return new TypeRecord(fields);
}

const Type *Parser::parseEnumType(Scope *)
{
    if (tokens[i].type != ENUM) {
        internal_error("ENUM expected");
    }
    i++;
    std::map<std::string, int> names;
    int index = 0;
    while (tokens[i].type != END) {
        if (tokens[i].type != IDENTIFIER) {
            error(2012, tokens[i], "identifier expected");
        }
        std::string name = tokens[i].text;
        if (names.find(name) != names.end()) {
            error(2013, tokens[i], "duplicate enum: " + name);
        }
        i++;
        names[name] = index;
        index++;
    }
    i++;
    if (tokens[i].type != ENUM) {
        error(2101, tokens[i], "'ENUM' expected");
    }
    i++;
    return new TypeEnum(names);
}

const Type *Parser::parsePointerType(Scope *scope)
{
    if (tokens[i].type != POINTER) {
        internal_error("POINTER expected");
    }
    i++;
    if (tokens[i].type == TO) {
        i++;
        if (tokens[i].type == IDENTIFIER && scope->lookupName(tokens[i].text) == nullptr) {
            const std::string name = tokens[i].text;
            i++;
            TypePointer *ptrtype = new TypePointer(new TypeForwardRecord());
            scope->addForward(name, ptrtype);
            return ptrtype;
        } else {
            const Type *reftype = parseType(scope);
            const TypeRecord *rectype = dynamic_cast<const TypeRecord *>(reftype);
            if (rectype == nullptr) {
                error(2171, tokens[i], "record type expected");
            }
            return new TypePointer(rectype);
        }
    } else {
        return new TypePointer(nullptr);
    }
}

const Type *Parser::parseType(Scope *scope)
{
    if (tokens[i].type == ARRAY) {
        return parseArrayType(scope);
    }
    if (tokens[i].type == DICTIONARY) {
        return parseDictionaryType(scope);
    }
    if (tokens[i].type == RECORD) {
        return parseRecordType(scope);
    }
    if (tokens[i].type == ENUM) {
        return parseEnumType(scope);
    }
    if (tokens[i].type == POINTER) {
        return parsePointerType(scope);
    }
    if (tokens[i].type != IDENTIFIER) {
        error(2014, tokens[i], "identifier expected");
    }
    const Name *name = scope->lookupName(tokens[i].text);
    if (name == nullptr) {
        error(2015, tokens[i], "unknown type name");
    }
    const Type *type = dynamic_cast<const Type *>(name);
    if (type == nullptr) {
        error(2016, tokens[i], "name is not a type");
    }
    i++;
    return type;
}

const Statement *Parser::parseTypeDefinition(Scope *scope)
{
    ++i;
    if (tokens[i].type != IDENTIFIER) {
        error(2018, tokens[i], "identifier expected");
    }
    std::string name = tokens[i].text;
    if (scope->lookupName(name) != nullptr) {
        error(2019, tokens[i], "name shadows outer");
    }
    ++i;
    if (tokens[i].type != ASSIGN) {
        error(2020, tokens[i], "':=' expected");
    }
    ++i;
    const Type *type = parseType(scope);
    scope->addName(name, const_cast<Type *>(type)); // Still ugly.
    const TypeRecord *rectype = dynamic_cast<const TypeRecord *>(type);
    if (rectype != nullptr) {
        scope->resolveForward(name, rectype);
    }
    return nullptr;
}

const Statement *Parser::parseConstantDefinition(Scope *scope)
{
    ++i;
    if (tokens[i].type != IDENTIFIER) {
        error(2021, tokens[i], "identifier expected");
    }
    std::string name = tokens[i].text;
    if (scope->lookupName(name) != nullptr) {
        error(2022, tokens[i], "name shadows outer");
    }
    ++i;
    if (tokens[i].type != COLON) {
        error(2023, tokens[i], "':' expected");
    }
    ++i;
    const Type *type = parseType(scope);
    if (tokens[i].type != ASSIGN) {
        error(2024, tokens[i], "':=' expected");
    }
    ++i;
    const Expression *value = parseExpression(scope);
    if (not value->type->is_equivalent(type)) {
        error(2025, tokens[i], "type mismatch");
    }
    if (not value->is_constant) {
        error(2026, tokens[i], "value must be constant");
    }
    scope->addName(name, new Constant(name, value));
    return nullptr;
}

const FunctionCall *Parser::parseFunctionCall(const Expression *func, const Expression *self, Scope *scope)
{
    const TypeFunction *ftype = dynamic_cast<const TypeFunction *>(func->type);
    if (ftype == nullptr) {
        error(2027, tokens[i-1], "not a function");
    }
    ++i;
    std::vector<const Type *>::size_type p = 0;
    std::vector<const Expression *> args;
    if (self != nullptr) {
        args.push_back(self);
        ++p;
    }
    if (tokens[i].type != RPAREN) {
        for (;;) {
            const Expression *e = parseExpression(scope);
            if (p >= ftype->params.size()) {
                error(2167, tokens[i], "too many parameters");
            }
            if (ftype->params[p]->mode != ParameterType::IN) {
                const ReferenceExpression *ref = dynamic_cast<const ReferenceExpression *>(e);
                if (ref == nullptr) {
                    error(2028, tokens[i], "function call argument must be reference: " + e->text());
                }
                if (ref != nullptr && ref->is_readonly) {
                    error(2181, tokens[i], "readonly parameter to OUT");
                }
            }
            if (not e->type->is_equivalent(ftype->params[p]->type)) {
                error(2029, tokens[i], "type mismatch");
            }
            args.push_back(e);
            ++p;
            if (tokens[i].type != COMMA) {
                break;
            }
            ++i;
        }
        if (tokens[i].type != RPAREN) {
            error(2030, tokens[i], "')' or ',' expected");
        }
    }
    if (p < ftype->params.size()) {
        error(2031, tokens[i], "not enough arguments");
    }
    ++i;
    return new FunctionCall(func, args);
}

const ArrayLiteralExpression *Parser::parseArrayLiteral(Scope *scope)
{
    std::vector<const Expression *> elements;
    const Type *elementtype = nullptr;
    while (tokens[i].type != RBRACKET) {
        const Expression *element = parseExpression(scope);
        if (elementtype == nullptr) {
            elementtype = element->type;
        } else if (not element->type->is_equivalent(elementtype)) {
            error(2138, tokens[i], "type mismatch");
        }
        elements.push_back(element);
        if (tokens[i].type == COMMA) {
            ++i;
        } else if (tokens[i].type != RBRACKET) {
            error(2139, tokens[i], "',' or ']' expected");
        }
    }
    ++i;
    return new ArrayLiteralExpression(elementtype, elements);
}

const DictionaryLiteralExpression *Parser::parseDictionaryLiteral(Scope *scope)
{
    std::vector<std::pair<std::string, const Expression *>> elements;
    std::set<std::string> keys;
    const Type *elementtype = nullptr;
    while (tokens[i].type == STRING) {
        std::string key = tokens[i].text;
        if (not keys.insert(key).second) {
            error(2140, tokens[i], "duplicate key");
        }
        ++i;
        if (tokens[i].type != COLON) {
            error(2126, tokens[i], "':' expected");
        }
        ++i;
        const Expression *element = parseExpression(scope);
        if (elementtype == nullptr) {
            elementtype = element->type;
        } else if (not element->type->is_equivalent(elementtype)) {
            error(2127, tokens[i], "type mismatch");
        }
        elements.push_back(std::make_pair(key, element));
        if (tokens[i].type == COMMA) {
            ++i;
        }
    }
    return new DictionaryLiteralExpression(elementtype, elements);
}

const Name *Parser::parseQualifiedName(Scope *scope, int &enclosing)
{
    const Name *name = scope->lookupName(tokens[i].text, enclosing);
    if (name == nullptr) {
        error(2059, tokens[i], "name not found: " + tokens[i].text);
    }
    const Module *module = dynamic_cast<const Module *>(name);
    if (module != nullptr) {
        ++i;
        if (tokens[i].type != DOT) {
            error(2060, tokens[i], "'.' expected");
        }
        ++i;
        return parseQualifiedName(module->scope, enclosing);
    }
    return name;
}

/*
 * Operator precedence:
 *
 *  ^        exponentiation                     parseExponentiation
 *  * / MOD  multiplication, division, modulo   parseMultiplication
 *  + -      addition, subtraction              parseAddition
 *  < = >    comparison                         parseComparison
 *  in       membership                         parseMembership
 *  and      conjunction                        parseConjunction
 *  or       disjunction                        parseDisjunction
 *  if       conditional                        parseConditional
 */

const Expression *Parser::parseAtom(Scope *scope)
{
    switch (tokens[i].type) {
        case LPAREN: {
            ++i;
            const Expression *expr = parseExpression(scope);
            if (tokens[i].type != RPAREN) {
                error(2032, tokens[i], ") expected");
            }
            ++i;
            return expr;
        }
        case LBRACKET: {
            ++i;
            const Expression *array = parseArrayLiteral(scope);
            return array;
        }
        case LBRACE: {
            ++i;
            const Expression *dict = parseDictionaryLiteral(scope);
            if (tokens[i].type != RBRACE) {
                error(2128, tokens[i], "'}' expected");
            }
            ++i;
            return dict;
        }
        case FALSE: {
            ++i;
            return new ConstantBooleanExpression(false);
        }
        case TRUE: {
            ++i;
            return new ConstantBooleanExpression(true);
        }
        case NUMBER: {
            return new ConstantNumberExpression(tokens[i++].value);
        }
        case STRING: {
            return new ConstantStringExpression(tokens[i++].text);
        }
        case MINUS: {
            auto op = i;
            ++i;
            const Expression *factor = parseAtom(scope);
            if (not factor->type->is_equivalent(TYPE_NUMBER)) {
                error(2033, tokens[op], "number required for negation");
            }
            return new UnaryMinusExpression(factor);
        }
        case NOT: {
            auto op = i;
            ++i;
            const Expression *atom = parseAtom(scope);
            if (not atom->type->is_equivalent(TYPE_BOOLEAN)) {
                error(2034, tokens[op], "boolean required for logical not");
            }
            return new LogicalNotExpression(atom);
        }
        case NEW: {
            ++i;
            const TypeRecord *type = dynamic_cast<const TypeRecord *>(parseType(scope));
            if (type == nullptr) {
                error(2172, tokens[i], "record type expected");
            }
            return new NewRecordExpression(type);
        }
        case NIL: {
            ++i;
            return new ConstantNilExpression();
        }
        case IDENTIFIER: {
            const Name *name = scope->lookupName(tokens[i].text);
            const TypeEnum *enumtype = dynamic_cast<const TypeEnum *>(name);
            /* TODO: This allows referencing enum values for a variable
                     declared with an anonymous enum type. But it currently
                     conflicts with method call syntax like a.to_string().
            if (name != nullptr && enumtype == nullptr && tokens[i+1].type == DOT) {
                enumtype = dynamic_cast<const TypeEnum *>(name->type);
            }*/
            if (enumtype != nullptr) {
                ++i;
                if (tokens[i].type != DOT) {
                    error(2035, tokens[i], "'.' expected");
                }
                ++i;
                if (tokens[i].type != IDENTIFIER) {
                    error(2036, tokens[i], "identifier expected");
                }
                auto name = enumtype->names.find(tokens[i].text);
                if (name == enumtype->names.end()) {
                    error(2037, tokens[i], "identifier not member of enum: " + tokens[i].text);
                }
                ++i;
                return new ConstantEnumExpression(enumtype, name->second);
            } else {
                int enclosing;
                const Name *name = parseQualifiedName(scope, enclosing);
                const Constant *cons = dynamic_cast<const Constant *>(name);
                if (cons != nullptr) {
                    ++i;
                    return cons->value;
                }
                const Variable *var = dynamic_cast<const Variable *>(name);
                if (var == nullptr) {
                    error(2061, tokens[i], "name is not a variable: " + tokens[i].text);
                }
                const Expression *expr = new VariableExpression(var);
                const Type *type = var->type;
                ++i;
                for (;;) {
                    if (tokens[i].type == LBRACKET) {
                        const TypeArray *arraytype = dynamic_cast<const TypeArray *>(type);
                        const TypeDictionary *dicttype = dynamic_cast<const TypeDictionary *>(type);
                        if (arraytype != nullptr) {
                            ++i;
                            const Expression *index = parseExpression(scope);
                            if (not index->type->is_equivalent(TYPE_NUMBER)) {
                                error(2062, tokens[i], "index must be a number");
                            }
                            if (tokens[i].type != RBRACKET) {
                                error(2063, tokens[i], "']' expected");
                            }
                            ++i;
                            type = arraytype->elementtype;
                            const ReferenceExpression *ref = dynamic_cast<const ReferenceExpression *>(expr);
                            if (ref != nullptr) {
                                expr = new ArrayReferenceIndexExpression(type, ref, index);
                            } else {
                                expr = new ArrayValueIndexExpression(type, expr, index);
                            }
                        } else if (dicttype != nullptr) {
                            ++i;
                            const Expression *index = parseExpression(scope);
                            if (not index->type->is_equivalent(TYPE_STRING)) {
                                error(2064, tokens[i], "index must be a string");
                            }
                            if (tokens[i].type != RBRACKET) {
                                error(2065, tokens[i], "']' expected");
                            }
                            ++i;
                            type = dicttype->elementtype;
                            const ReferenceExpression *ref = dynamic_cast<const ReferenceExpression *>(expr);
                            if (ref != nullptr) {
                                expr = new DictionaryReferenceIndexExpression(type, ref, index);
                            } else {
                                expr = new DictionaryValueIndexExpression(type, expr, index);
                            }
                        } else if (type == TYPE_STRING) {
                            const ReferenceExpression *ref = dynamic_cast<const ReferenceExpression *>(expr);
                            // TODO
                            ++i;
                            const Expression *index = parseExpression(scope);
                            if (not index->type->is_equivalent(TYPE_NUMBER)) {
                                error(2066, tokens[i], "index must be a number");
                            }
                            if (tokens[i].type != RBRACKET) {
                                error(2067, tokens[i], "']' expected");
                            }
                            ++i;
                            return new StringIndexExpression(ref, index);
                        } else {
                            error(2068, tokens[i], "not an array or dictionary");
                        }
                    } else if (tokens[i].type == LPAREN) {
                        expr = parseFunctionCall(expr, nullptr, scope);
                        type = expr->type;
                    } else if (tokens[i].type == DOT) {
                        ++i;
                        if (tokens[i].type != IDENTIFIER) {
                            error(2069, tokens[i], "identifier expected");
                        }
                        const std::string field = tokens[i].text;
                        auto m = type->methods.find(field);
                        const TypeRecord *recordtype = dynamic_cast<const TypeRecord *>(type);
                        if (m != type->methods.end()) {
                            ++i;
                            if (tokens[i].type != LPAREN) {
                                error(2196, tokens[i], "'(' expected");
                            }
                            expr = parseFunctionCall(new VariableExpression(m->second), expr, scope);
                        } else if (recordtype != nullptr) {
                            if (dynamic_cast<const TypeForwardRecord *>(recordtype) != nullptr) {
                                internal_error("record not defined yet");
                            }
                            std::map<std::string, std::pair<int, const Type *> >::const_iterator f = recordtype->fields.find(field);
                            if (f == recordtype->fields.end()) {
                                error(2070, tokens[i], "field not found");
                            }
                            ++i;
                            type = f->second.second;
                            const ReferenceExpression *ref = dynamic_cast<const ReferenceExpression *>(expr);
                            if (ref != nullptr) {
                                expr = new ArrayReferenceIndexExpression(type, ref, new ConstantNumberExpression(number_from_uint32(f->second.first)));
                            } else {
                                expr = new ArrayValueIndexExpression(type, expr, new ConstantNumberExpression(number_from_uint32(f->second.first)));
                            }
                        } else {
                            error(2071, tokens[i], "no method found or not a record");
                        }
                    } else if (tokens[i].type == ARROW) {
                        const TypePointer *pointertype = dynamic_cast<const TypePointer *>(type);
                        if (pointertype != nullptr) {
                            if (dynamic_cast<const TypeValidPointer *>(pointertype) == nullptr) {
                                error(2178, tokens[i], "pointer must be a valid pointer");
                            }
                            const TypeRecord *recordtype = pointertype->reftype;
                            if (recordtype == nullptr) {
                                error(2194, tokens[i], "pointer must not be a generic pointer");
                            }
                            ++i;
                            if (dynamic_cast<const TypeForwardRecord *>(recordtype) != nullptr) {
                                error(2179, tokens[i], "record not defined yet");
                            }
                            if (tokens[i].type != IDENTIFIER) {
                                error(2186, tokens[i], "identifier expected");
                            }
                            std::map<std::string, std::pair<int, const Type *> >::const_iterator f = recordtype->fields.find(tokens[i].text);
                            if (f == recordtype->fields.end()) {
                                error(2187, tokens[i], "field not found");
                            }
                            ++i;
                            type = f->second.second;
                            const PointerDereferenceExpression *ref = new PointerDereferenceExpression(type, expr);
                            expr = new ArrayReferenceIndexExpression(type, ref, new ConstantNumberExpression(number_from_uint32(f->second.first)));
                        } else {
                            error(2188, tokens[i], "not a pointer");
                        }
                    } else {
                        break;
                    }
                }
                return expr;
            }
        }
        default:
            error(2038, tokens[i], "Expression expected");
    }
}

const Expression *Parser::parseExponentiation(Scope *scope)
{
    const Expression *left = parseAtom(scope);
    for (;;) {
        if (tokens[i].type == EXP) {
            auto op = i;
            ++i;
            const Expression *right = parseAtom(scope);
            if (left->type->is_equivalent(TYPE_NUMBER) && right->type->is_equivalent(TYPE_NUMBER)) {
                left = new ExponentiationExpression(left, right);
            } else {
                error(2039, tokens[op], "type mismatch");
            }
        } else {
            return left;
        }
    }
}

const Expression *Parser::parseMultiplication(Scope *scope)
{
    const Expression *left = parseExponentiation(scope);
    for (;;) {
        switch (tokens[i].type) {
            case TIMES: {
                auto op = i;
                ++i;
                const Expression *right = parseExponentiation(scope);
                if (left->type->is_equivalent(TYPE_NUMBER) && right->type->is_equivalent(TYPE_NUMBER)) {
                    left = new MultiplicationExpression(left, right);
                } else {
                    error(2040, tokens[op], "type mismatch");
                }
                break;
            }
            case DIVIDE: {
                auto op = i;
                ++i;
                const Expression *right = parseExponentiation(scope);
                if (left->type->is_equivalent(TYPE_NUMBER) && right->type->is_equivalent(TYPE_NUMBER)) {
                    left = new DivisionExpression(left, right);
                } else {
                    error(2041, tokens[op], "type mismatch");
                }
                break;
            }
            case MOD: {
                auto op = i;
                ++i;
                const Expression *right = parseExponentiation(scope);
                if (left->type->is_equivalent(TYPE_NUMBER) && right->type->is_equivalent(TYPE_NUMBER)) {
                    left = new ModuloExpression(left, right);
                } else {
                    error(2042, tokens[op], "type mismatch");
                }
                break;
            }
            default:
                return left;
        }
    }
}
